--- a/ircfs.cabal
+++ b/ircfs.cabal
@@ -24,5 +24,15 @@ source-repository head
 
 library
     exposed-modules:    Network.IRC.Message
-    build-depends: base, bytestring >= 0.9, attoparsec
+                        Filesystem.IRC.IRCcon
+                        Filesystem.IRC.Ctl
+    build-depends: base, bytestring >= 0.9, attoparsec, HFuse, unix,
+                    filepath, network
 
+executable ircfs
+    main-is:            Main.hs
+    ghc-options:        -threaded
+    other-modules:
+                        Network.IRC.Message
+                        Filesystem.IRC.IRCcon
+                        Filesystem.IRC.Ctl
