--- a/ircfs.cabal
+++ b/ircfs.cabal
@@ -24,11 +24,9 @@ source-repository head
 
 library
     exposed-modules:    Network.IRC.Message
-                        Filesystem.IRC.IRCcon
-                        Filesystem.IRC.Ctl
     build-depends: base, bytestring >= 0.9, attoparsec, HFuse, unix,
                     filepath, network, enumerator, network-enumerator,
-                    transformers
+                    transformers, cmdargs, attoparsec-enumerator
 
 executable ircfs
     main-is:            Main.hs
@@ -36,4 +34,5 @@ executable ircfs
     other-modules:
                         Network.IRC.Message
                         Filesystem.IRC.IRCcon
-                        Filesystem.IRC.Ctl
+                        Ircfs.Ctl
+                        Ircfs.Types
