--- a/ircfs.cabal
+++ b/ircfs.cabal
@@ -14,28 +14,47 @@ homepage:           http://github.com/bernstein/ircfs/
 build-type:         Simple
 description:        Ircfs is an irc client with a fuse file system interface.
 extra-source-files: 
-    README
-    tests/Makefile
-    tests/TestMessage.hs
+  README
+  tests/Makefile
+  tests/TestMessage.hs
 
 source-repository head
   type: git
   location: git://github.com/bernstein/ircfs.git
 
 library
-    exposed-modules:    Network.IRC.Message
-    build-depends: base, bytestring >= 0.9, attoparsec, HFuse, unix,
-                    filepath, network, enumerator, network-enumerator,
-                    transformers, cmdargs, attoparsec-enumerator, rope, mtl,
-                    data-lens, containers
+  exposed-modules:
+    Network.IRC.Message
+    Network.IRC.Enumerator
+    System.Fuse.Request
+  build-depends:
+    base,
+    bytestring >= 0.9,
+    attoparsec,
+    HFuse,
+    unix,
+    filepath,
+    enumerator,
+    network,
+    network-enumerator,
+    transformers,
+    cmdargs,
+    attoparsec-enumerator,
+    rope,
+    mtl,
+    data-lens,
+    containers,
+    time,
+    old-locale
 
 executable ircfs
-    main-is:            Main.hs
-    ghc-options:        -threaded
-    other-modules:
-                        Network.IRC.Message
-                        System.Fuse.Request
-                        Filesystem.IRC.IRCcon
-                        Ircfs.Ctl
-                        Ircfs.Types
-                        Ircfs.CmdLine
+  main-is:            Main.hs
+  ghc-options:        -Wall -threaded
+  other-modules:
+    Network.IRC.Message
+    Network.IRC.Enumerator
+    System.Fuse.Request
+    Filesystem.IRC.IRCcon
+    Ircfs.Ctl
+    Ircfs.Types
+    Ircfs.CmdLine
